--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -35,7 +35,7 @@
                 <span>Pass</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/admin/user">
                 <i class="fas fa-fw fa-user"></i>
                 <span>Users</span></a>
         </li>
