--- a/src/main/resources/templates/login/join.mustache
+++ b/src/main/resources/templates/login/join.mustache
@@ -1,50 +1,50 @@
-<!DOCTYPE html>
-
 <head>
+    <meta charset="UTF-8">
+    <title>로그인</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Quicksand:wght@700&display=swap" rel="stylesheet">
-    <link href="/login/css/common.css" rel="stylesheet">
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="/login/css/login2.css">
 </head>
 
 
-<div class="container">
-    <div class="col-lg-4" style="padding:20px; text-align: center; margin: 0 auto;">
-        <form name="joinForm">
-            <h2 style="text-align:center;">회원가입</h2>
-            <div class ="mb-3">
-                <input type ="text" class="form-control" placeholder="아이디" name ="userId" maxlength='20' onkeyup="checkEnter(event)">
-                <p style="text-align:left; color:red"></p>
-            </div>
 
-            <div class ="mb-3">
-                <input type ="password" class="form-control" placeholder="비밀번호" name ="password" maxlength='20' onkeyup="checkEnter(event)">
-                <p style="text-align:left; color:red"></p>
-            </div>
+    <div class="center-wrap">
+        <div class="section text-center">
+            <h4 class="mb-4 pb-3">Sign Up</h4>
 
-            <div class ="mb-3">
-                <input type ="text" class="form-control" placeholder="이름" name ="userName" maxlength='20' onkeyup="checkEnter(event)">
-            </div>
+            <form name="joinForm">
+                <div class="form-group">
+                    <input type ="text" class="form-style" placeholder="아이디" name ="userId" maxlength='20' onkeyup="checkEnter(event)">
+                    <p style="text-align:left; color:red; margin-left:50px; font-size:15px"></p>
+                </div>
 
-            <div class ="mb-3">
-                <input type="tel" class="form-control" placeholder="전화번호" name="phone" maxlength="20" onkeyup="checkEnter(event)">
-            </div>
+                <div class="form-group">
+                    <input type ="password" class="form-style" placeholder="비밀번호" name ="password" maxlength='20' onkeyup="checkEnter(event)">
+                    <p style="text-align:left; color:red; margin-left:50px; font-size:15px"></p>
+                </div>
 
-            <div class ="mb-3">
-                <input type ="email" class="form-control" placeholder="이메일" name ="eMail" maxlength='20' onkeyup="checkEnter(event)">
-            </div>
+                <div class="form-group">
+                    <input type ="text" class="form-style" placeholder="이름" name ="userName" maxlength='20' onkeyup="checkEnter(event)">
+                </div>
 
-            <div class ="mb-3">
-                <input type ="email" class="form-control" placeholder="카카오 계정 ID" name ="kaKaoId" maxlength='20' onkeyup="checkEnter(event)">
-            </div>
+                <div class="form-group">
+                    <input type="tel" class="form-style" placeholder="전화번호" name="phone" maxlength="20" onkeyup="checkEnter(event)">
+                </div>
 
-            <input type="button" class="btn btn-primary form-control" value="회원가입" onclick="sub()">
-        </form>
+                <div class="form-group">
+                    <input type ="email" class="form-style" placeholder="이메일" name ="eMail" maxlength='20' onkeyup="checkEnter(event)">
+                </div>
 
+                <div class="form-group">
+                    <input type ="email" class="form-style" placeholder="카카오 계정 ID" name ="kaKaoId" maxlength='20' onkeyup="checkEnter(event)">
+                </div>
 
+                <input type="button" class="btn mt-4" value="회원가입" onclick="sub()">
+            </form>
+        </div>
     </div>
-</div>
+
 
 <script>
     function checkEnter(event) {
