--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -45,7 +45,7 @@
                 <span>User Groups</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="http://localhost:8080/admin?to=2022-09-10">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>Statistics</span></a>
         </li>
