--- a/src/main/resources/templates/pass/calendar.html
+++ b/src/main/resources/templates/pass/calendar.html
@@ -12,7 +12,8 @@
         <div class="month"></div>
         <a href="javascript:;" class="nav-btn go-next">next</a>
     </div>
-    <input hidden name="passSeq" th:value="${passSeq}"></input>
+    <input hidden name="passSeq" th:value="${passSeq}">
+    <input hidden name="userId" th:value="${userId}">
     <div class="cal_wrap">
         <div class="days">
             <div class="day">MON</div>
