--- a/src/main/resources/templates/pass/calendar.html
+++ b/src/main/resources/templates/pass/calendar.html
@@ -25,7 +25,9 @@
             <div class="day">SUN</div>
         </div>
         <div class="dates"></div>
-        <ul class="reservation-list"></ul>
+        <div class="reservation-list">
+
+        </div>
     </div>
 </div>
 
