yeom final commit

--- a/src/main/resources/templates/admin/bulk-pass.html
+++ b/src/main/resources/templates/admin/bulk-pass.html
@@ -29,7 +29,7 @@
                                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                         <thead>
                                         <tr>
-                                            <th>회원 그룹 ID</th>
+                                            <th>회원 ID</th>
                                             <th>상태</th>
                                             <th>횟수</th>
                                             <th>시작 일시</th>
@@ -38,7 +38,7 @@
                                         </thead>
                                         <tbody>
                                         <tr th:each="bulkPass : ${bulkPasses}" th:classappend="${bulkPass.getStatus().name() == 'COMPLETED' ? 'table-active' : ''}">
-                                            <td th:text="${bulkPass.getUserGroupId()}"></td>
+                                            <td th:text="${bulkPass.getUserId()}"></td>
                                             <td th:if="${bulkPass.getStatus().name() == 'COMPLETED'}">지급 완료</td>
                                             <td th:unless="${bulkPass.getStatus().name() == 'COMPLETED'}">지급 전</td>
                                             <td th:if="${bulkPass.getCount() != null}" th:text="${bulkPass.getCount()}"></td>
@@ -70,17 +70,21 @@
                                         </option>
                                     </select>
 
-                                    <div class="small mb-1">회원 그룹 ID</div>
-                                    <select class="form-control mb-3" th:field="*{userGroupId}">
-                                        <option value="">등록된 회원 그룹을 선택해주세요.</option>
-                                        <option th:each="userGroupId : ${userGroupIds}"
-                                                th:value="${userGroupId}"
-                                                th:text="${userGroupId}">
-                                        </option>
-                                    </select>
+<!--                                    <div class="small mb-1">회원 그룹 ID</div>-->
+<!--                                    <select class="form-control mb-3" th:field="*{userGroupId}">-->
+<!--                                        <option value="">등록된 회원 그룹을 선택해주세요.</option>-->
+<!--                                        <option th:each="userGroupId : ${userGroupIds}"-->
+<!--                                                th:value="${userGroupId}"-->
+<!--                                                th:text="${userGroupId}">-->
+<!--                                        </option>-->
+<!--                                    </select>-->
+
+                                    <div class="small mb-1">회원 ID</div>
+                                    <input class="form-control mb-3" type="text" placeholder="회원 코드를 입력해주세요" th:field="*{userId}"/>
 
                                     <div class="small mb-1">시작 일시</div>
                                     <input class="form-control mb-5" type="text" placeholder="2022-09-01 00:00" th:field="*{startedAt}" id="startedAtInput" />
+
                                     <div class="d-flex align-items-end flex-column">
                                         <input class="btn btn-primary" type="submit" value="+ 등록">
                                     </div>
