--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -88,6 +88,7 @@
                                                 <th>수업일</th>
                                                 <th>예약 번호</th>
                                                 <th>강사</th>
+                                                <th class="admin_board_head">회원ID</th>
                                                 <th class="admin_board_head">회원명</th>
                                                 <th class="admin_board_head">시작 시간</th>
                                                 <th class="admin_board_head">종료 시간</th>
@@ -98,6 +99,7 @@
                                                 <td th:text="${vo.date}"></td>
                                                 <td th:text="${vo.bookingSeq}"></td>
                                                 <td th:text="${vo.instructorName}"></td>
+                                                <td th:text="${vo.userId}"></td>
                                                 <td th:text="${vo.userName}"></td>
                                                 <td th:text="${vo.startedAt}"></td>
                                                 <td th:text="${vo.endedAt}"></td>
