--- a/src/main/resources/templates/pass/index.html
+++ b/src/main/resources/templates/pass/index.html
@@ -29,6 +29,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-4 rounded" href="/generalforum">Q/A</a></li>
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#passes">이용권</a></li>
 
                 <a th:if="${session.user}" class="nav-link py-3 px-0 px-lg-3 rounded" href="/login/logout">로그아웃</a> <!--조건이 참일때 태그를 렌더링 -->
