--- a/src/main/resources/templates/pass/index.html
+++ b/src/main/resources/templates/pass/index.html
@@ -81,7 +81,7 @@
 </body>
 <!-- Copyright Section-->
 <div class="copyright py-4 text-center text-white">
-    <div class="container"><small>Copyright &copy; PT Pass Service 2022</small></div>
+    <div class="container"><small>Copyright &copy; Sport Pass Service 2023</small></div>
 </div>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
